<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/recyclerHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/item_recycler_user" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="@dimen/largeMargin"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/recyclerView" />

    <TextView
        android:id="@+id/tvId"
        style="@style/textBold"
        android:layout_width="@dimen/tvWidth"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/largeMargin"
        android:text="@string/id"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/recyclerView" />

    <TextView
        android:id="@+id/tvName"
        style="@style/textBold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/commonMargin"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="@id/tvId"
        app:layout_constraintStart_toStartOf="@id/tvId"
        app:layout_constraintTop_toBottomOf="@id/tvId" />

    <TextView
        android:id="@+id/tvSurname"
        style="@style/textBold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/commonMargin"
        android:text="@string/surname"
        app:layout_constraintEnd_toEndOf="@id/tvId"
        app:layout_constraintStart_toStartOf="@id/tvId"
        app:layout_constraintTop_toBottomOf="@id/tvName" />

    <TextView
        android:id="@+id/tvCompany"
        style="@style/textBold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/commonMargin"
        android:text="@string/company"
        app:layout_constraintEnd_toEndOf="@id/tvId"
        app:layout_constraintStart_toStartOf="@id/tvId"
        app:layout_constraintTop_toBottomOf="@id/tvSurnameContent" />


    <TextView
        android:id="@+id/tvSalary"
        style="@style/textBold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/commonMargin"
        android:text="@string/salary"
        app:layout_constraintEnd_toEndOf="@id/tvId"
        app:layout_constraintStart_toStartOf="@id/tvId"
        app:layout_constraintTop_toBottomOf="@id/tvCompany" />

    <TextView
        android:id="@+id/tvTotal"
        style="@style/textBold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/commonMargin"
        android:text="@string/total"
        app:layout_constraintEnd_toEndOf="@id/tvId"
        app:layout_constraintStart_toStartOf="@id/tvId"
        app:layout_constraintTop_toBottomOf="@id/tvSalary" />


    <TextView
        android:id="@+id/tvIdContent"
        style="@style/textItalic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tvId"
        app:layout_constraintTop_toTopOf="@id/tvId"
        tools:text="45" />

    <TextView
        android:id="@+id/tvNameContent"
        style="@style/textItalic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tvId"
        app:layout_constraintTop_toTopOf="@id/tvName"
        tools:text="Pepe" />

    <TextView
        android:id="@+id/tvSurnameContent"
        style="@style/textItalic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/largeMargin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvId"
        app:layout_constraintTop_toTopOf="@id/tvSurname"
        tools:text="De Quesada López del Quintanar" />

    <TextView
        android:id="@+id/tvCompanyContent"
        style="@style/textItalic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tvId"
        app:layout_constraintTop_toTopOf="@id/tvCompany"
        tools:text="Currantes SL" />

    <TextView
        android:id="@+id/tvSalaryContent"
        style="@style/textItalic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tvId"
        app:layout_constraintTop_toTopOf="@id/tvSalary"
        tools:text="31563.34" />

    <TextView
        android:id="@+id/tvTotalContent"
        style="@style/textItalic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tvId"
        app:layout_constraintTop_toTopOf="@id/tvTotal"
        tools:text="1983.67" />

</androidx.constraintlayout.widget.ConstraintLayout>